--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "crypto": "^1.0.1",
     "express": "^4.18.3",
-    "mongodb": "^6.4.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.4.0",
+    "nodemailer": "^6.9.13",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "body-parser": "^1.20.2",
